# VideoReScale

./: .gitignore  CMakeLists.txt  DisplayVideo.cpp  README.md  VideoReScale  VideoReScale.cpp  VideoReScaleCUDA.cu  VideoReScaleOpenMP.cpp  out2.mkv
