cmake_minimum_required(VERSION 2.8)
project( VideoReScale.out )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( VideoReScale.out VideoReScale.cpp )
target_link_libraries( VideoReScale.out ${OpenCV_LIBS} )
find_package(OpenMP)
if(OpenMP_CXX_FOUND)
    target_link_libraries(VideoReScale.out OpenMP::OpenMP_CXX)
endif()