cmake_minimum_required(VERSION 2.8)
project( VideoReScale )
find_package(MPI REQUIRED)
add_definitions(-DOMPI_SKIP_MPICXX)
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
include_directories( ${MPI_INCLUDE_PATH} )
add_executable( VideoReScale VideoReScale.cpp )
target_link_libraries( VideoReScale ${OpenCV_LIBS} )
target_link_libraries( VideoReScale ${MPI_C_LIBRARIES} )
